2008-07-01  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/gtk+-2.0.vapi: Regenerated to make consistent with recent
	changes to vapi/gdk-2.0.vapi

2008-06-30  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:
	* vapi/packages/gio-2.0/:

	Fix g_pattern_match and g_content_type_guess bindings,
	patch by Phil Housley

	* vapi/gio-2.0.vapi: regenerated

2008-06-30  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodetypesymbolbinding.vala:

	Add support for uchar GObject properties, patch by Ali Sabil

2008-06-30  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/glib-2.0.vapi:

	Added Glib.Intl.bind_textdomain_codeset, set return types and
	parameters of Glib.Intl.* to nullable as appropriate.

2008-06-30  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gdk-2.0/gdk-2.0.metadata:

	Changed many classes to structs, fixes bug 540349. Also fix fields
	that should be arrays of structs, and hide several "Gdk*Class"
	structs.

	* vapi/gdk-2.0.vapi: Regenerated

2008-06-30  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valasemanticanalyzer.vala:

	Report error when an abstract method has a body, an extern method has
	a body, or a non-abstract non-extern method has no body, fixes bug 
	539692.

2008-06-29  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-pixbuf-2.0/:

	Various fixes, patch by Ali Sabil

	* vapi/gdk-pixbuf-2.0.vapi: regenerated

2008-06-29  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gio-2.0/gio-2.0.metadata:

	Let 'destroy' arguments of g_memory_input_stream_add_data and 
	g_memory_input_stream_new_from_data be nullable, fixes bug 540662.

	* vapi/gio-2.0.vapi: Regenerated

2008-06-29  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala:

	Add workaround for exception codegen problem, fixes bug 539608.

2008-06-29  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	Fixed return type of gtk_selection_data_get_pixbuf and
	gtk_selection_data_copy.

	* vapi/gtk+-2.0.vapi: Regenerated
