@@ -2489,8 +2489,9 @@ public class Vala.Parser : CodeVisitor {
 				break;
 			}
 			var code_attrs = parse_attributes ();
+			var code_begin = get_location ();
 			string id = parse_identifier ();
-			var ec = new ErrorCode (id);
+			var ec = new ErrorCode (id, get_src (code_begin));
 			set_attributes (ec, code_attrs);
 			if (accept (TokenType.ASSIGN)) {
 				ec.value = parse_expression ();
